--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,10 @@
     <title>ITunes</title>
 </head>
 <body>
-
-<h1>Hello<span th:text="${greeting}"></span> </h1>
+<h1>Artist Names</h1>
+<ul th:each="cust: ${artist}">
+    <li th:text="${cust.getName()}"></li>
+</ul>
 
 </body>
 </html>
