--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,10 @@
     <title>ITunes</title>
 </head>
 <body>
+<form>
+Searchbar: <input type="text" placeholder="Search here..." />
+
+</form>
 <h1>Artists: </h1>
 <ul th:each="cust: ${artist}">
     <li th:text="${cust.getName()}"></li>
@@ -19,6 +23,5 @@
 <ul th:each="cust: ${genres}">
     <li th:text="${cust.getGenreName()}"></li>
 </ul>
-
 </body>
 </html>
