FEAT: added readme

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form>
-Searchbar: <input type="text" placeholder="Search here..." />
+Searchbar: <input type="text" placeholder="Artist,Songs, Genres" />
 
 </form>
 <h1>Artists: </h1>
